kubernetes/invoice/invoice_postgresql.yaml
# Deployment configuration for the "invoice-postgresql" service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoice-postgresql
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invoice-postgresql
  template:
    metadata:
      labels:
        app: invoice-postgresql
      annotations:
        sidecar.istio.io/inject: "false"  # Istio sidecar injection disabled
    spec:
      volumes:
        - name: data
          emptyDir: {}  # Using an emptyDir volume for temporary data storage
      containers:
        - name: postgres
          image: postgres:14.2  
          ports:
            - containerPort: 5432  
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: postgres  # Mounting the data volume to /var/lib/postgresql/data
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
---
# Service configuration for the "invoice-postgresql" service
apiVersion: v1
kind: Service
metadata:
  name: invoice-postgresql
  namespace: production
spec:
  selector:
    app: invoice-postgresql
  ports:
    - port: 5432
