kubernetes/invoice/invoice_service.yaml
# Service for exposing invoice within the cluster using ClusterIp

apiVersion: v1
kind: Service
metadata:
  name: invoice
  namespace: production
  labels:
    app: invoice
spec:
  selector:
    app: invoice
  ports:
    - name: http
      port: 80
      targetPort: 8082
