kubernetes/invoice/invoice_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: invoice-network-policy
  namespace: production
spec:
  podSelector:
    matchLabels:
      app: invoice  
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: store
